# platinum-shell-gtk

./: .gitignore  Cargo.toml  README.md
src/: app.rs  app_store.rs  device.rs  device_service.rs  main.rs  navigation.rs  shell_state.rs  theme.rs  ui.rs
src/app_sdk/: mod.rs
src/apps/: ai.rs  apps_catalog.rs  calendar.rs  call.rs  clock.rs  contacts.rs  message.rs  mod.rs  platinum_one.rs  relay.rs  settings.rs
src/components/: app_drawer.rs  app_host.rs  bottom_nav.rs  home_screen.rs  mod.rs  top_drawer.rs
src/components/screens/: ai_screen.rs  apps_screen.rs  mod.rs  settings_screen.rs
